--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //compile project (path: ':mylibrary')
-    compile project(':mylibrary-debug')
+    // importar desde el disco
+    //compile project(':mylibrary-debug') //importar el archivo AAR
+    compile project(':mylibrary') //import para libreria compartida
 }
